--- a/_css/utilidades/colors.css
+++ b/_css/utilidades/colors.css
@@ -1,18 +1,20 @@
 :root {
   --n1: #000000;
   --n2: #FFFFFF;
-  --c0: #111111;
-  --c1: #2E2E2E;
-  --c2: #404040;
-  --c3: #595959;
-  --c4: #717171;
-  --c6: #9C9C9C;
-  --c6: #B2B2B2;
-  --c7: #CCCCCC;
-  --c8: #DEDEDE;
-  --c9: #EDEDED;
-  --c10: #F7F7F7;
+  --c1: #111111;
+  --c2: #2E2E2E;
+  --c3: #404040;
+  --c4: #595959;
+  --c5: #717171;
+  --c6: #717171;
+  --c7: #9C9C9C;
+  --c8: #B2B2B2;
+  --c9: #CCCCCC;
+  --c10: #DEDEDE;
+  --c11: #EDEDED;
+  --c12: #F7F7F7;
   --cp1: #00B3E8;
+  --cp1-b: #001B52;
   --cp2: #FE1E98;
   --cp3: #FEF300;
   --cp4: #222222;
@@ -58,6 +60,9 @@
 }
 .cp1 {
   color: var(--cp1);
+}
+.cp1-b {
+  color: var(--cp1-b);
 }
 .cp2 {
   color: var(--cp2);
