--- a/_css/global/header.css
+++ b/_css/global/header.css
@@ -48,11 +48,12 @@
 
 .search {
   padding: 8px 12px 0;
+  transition: .4s;
 }
-
 
 .search:hover  #search-lupa {
   fill: var(--cp1);
+  transition: .4s;
 }
 
 /* menu mobile */
@@ -64,11 +65,22 @@
 @media (max-width: 992px) {
   .header-menu {
     display: none;
+    position: absolute;
+    background: var(--cp1);
+    top: 56px;
+    right: 0;
+    height: calc(100vh - 56px);
+    width: 240px;
+    box-shadow: -1px 0 3px rgb(0 0 0 / 15%);
+    transition: .6s;
+    z-index: 1;
+  }
+  .header-menu.ativo {
+    display: block;
   }
   #btn-menu-mobile {
     display: block;
   }
-
   #btn-menu-mobile {
       display: flex;
       padding: .5rem 1rem;
@@ -78,20 +90,26 @@
       cursor: pointer;
       gap: .5rem;
   }
-  
   #hamburger {
-    border-top: 2px solid var(--cp1);
+    border-top: 2px solid var(--cp4);
     width: 20px;
+    transition: .4s;
+  }
+  #hamburger:hover {
+    border-color: var(--cp1);
   }
   #hamburger::after, #hamburger::before {
       content: '';
       display: block;
       width: 20px;
       height: 2px;
-      background-color: var(--cp1);
+      background-color: var(--cp4);
       margin-top: 5px;
       transition: .4s;
       position: relative;
+  }
+  #hamburger:hover:after, #hamburger:hover:before {
+    background-color: var(--cp1);
   }
   #nav.active #hamburger {
       border-top-color: transparent;
