--- a/_css/global/header.css
+++ b/_css/global/header.css
@@ -19,6 +19,7 @@
 }
 
 .header-menu a {
+  color: var(--cp1-b);
   display: inline-block;
   text-transform: uppercase;
   padding: 8px 8px 0;
@@ -66,17 +67,57 @@
   .header-menu {
     display: none;
     position: absolute;
-    background: var(--cp1);
-    top: 56px;
-    right: 0;
-    height: calc(100vh - 56px);
-    width: 240px;
-    box-shadow: -1px 0 3px rgb(0 0 0 / 15%);
+    background: var(--cp1-b);
+    top: 68px;
+    right: 32px;
+    width: 180px;
+    box-shadow: 2px 4px 1px rgb(0 0 0 / 15%);
     transition: .6s;
     z-index: 1;
+    border-radius: 4px;
+    border: 4px solid var(--cp1-b);
+  }
+  .header-menu::after {
+    content: "";
+    display: block;
+    position: absolute;
+    top: -12px;
+    right: 2px;
+    background: var(--cp1-b);
+    width: 16px;
+    height: 16px;
+    transform: rotate(45deg);
+    z-index: -1;
+  }
+  .header-menu li:not(:last-child) {
+    border-bottom: 1px solid var(--n2);
+  }
+  .header-menu a {
+    color: var(--cp1);
+    padding: 12px;
+    width: 100%;
+  }
+  .header-menu a:hover,
+  .header-menu a.ativo {
+    color: var(--n2);
+    background-color: var(--cp2)
+  }
+  .header-menu a::after {
+    display: none;
   }
   .header-menu.ativo {
     display: block;
+    animation: drop-menu-mobile .5s forwards;
+  }
+  @keyframes drop-menu-mobile {
+    0% {
+      opacity: .0;
+      transform: translateY(-16px)
+    }
+    100% {
+      opacity: 1;
+      transform: translateY(0px)
+    }
   }
   #btn-menu-mobile {
     display: block;
