--- a/_css/home/hero.css
+++ b/_css/home/hero.css
@@ -3,8 +3,8 @@
   grid-template-columns: 1fr 1fr;
   align-items: center;
   gap: 40px;
-  padding-top: 80px;padding-bottom: 80px;
-  /* min-height: calc(100vh - 76px); */
+  padding-top: 80px;
+  padding-bottom: 80px;
 }
 
 .hero-conteudo h1 {
