--- a/_css/global/header.css
+++ b/_css/global/header.css
@@ -1,5 +1,11 @@
 .header-bg {
   background: none;
+  position: fixed;
+  width: 100%;
+}
+.header-bg.ativo {
+  box-shadow: 0 1px 3px rgba(0, 0, 0, 0.15);
+  background:rgba(255, 255, 255, 0.95)
 }
 .header {
   display: flex;
