--- a/_css/global/header.css
+++ b/_css/global/header.css
@@ -2,6 +2,7 @@
   background: none;
   position: fixed;
   width: 100%;
+  z-index: 1;
 }
 .header-bg.ativo {
   box-shadow: 0 1px 3px rgba(0, 0, 0, 0.15);
