--- a/_css/home/portfolio.css
+++ b/_css/home/portfolio.css
@@ -31,6 +31,8 @@
   backdrop-filter: blur(4px);
 }
 .portfolio-title {
+  width: 100%;
+  text-align: center;
   position: absolute;
   top: 50%;
   left: 50%;
