--- a/_css/utilidades/typography.css
+++ b/_css/utilidades/typography.css
@@ -6,8 +6,13 @@
   font: 500 4rem/1.15 "Monteserrat", sans-serif;
   margin-bottom: 40px;
 }
+.titulo-b {
+  font: 500 3rem/1.25 "Monteserrat", sans-serif;
+  margin-bottom: 32px;
+}
+
 .subtitulo {
-  font: 500 1.5rem/1.15 "Monteserrat", sans-serif;
+  font: 500 1.5rem/1.5 "Monteserrat", sans-serif;
 }
 
 .texto {
@@ -17,10 +22,12 @@
 .texto-b {
   font: 600 1rem/1.5 "Open Sans", sans-serif;
 }
+
 .texto-2 {
   font: 500 1.5rem/1.35 "Open Sans", sans-serif;
   margin-bottom: 16px;
 }
+
 .texto-3 {
   font: 500 2rem/1.35 "Open Sans", sans-serif;
   margin-bottom: 16px;
@@ -30,6 +37,14 @@
 @media (max-width: 998px) {
   .titulo {
     font-size: 3rem;
+  }.titulo-b {
+    font-size: 2rem;
+  }
+  .subtitulo {
+    font: 500 1.25rem/1.5 "Monteserrat", sans-serif;
+  }
+  .texto {
+    font: 400 .875rem/1.5 "Open Sans", sans-serif;
   }
   .texto-2 {
     font-size: 1.5rem
@@ -38,6 +53,8 @@
 @media (max-width: 700px) {
   .titulo {
     font-size: 2rem;
+  }.titulo-b {
+    font-size: 1.5rem;
   }
   .texto-2 {
     font-size: 1.25rem
