--- a/_css/utilidades/colors.css
+++ b/_css/utilidades/colors.css
@@ -15,6 +15,7 @@
   --c12: #F7F7F7;
   --cp1: #00B3E8;
   --cp1-b: #001B52;
+  --cp1-c: #011640;
   --cp2: #FE1E98;
   --cp3: #FEF300;
   --cp4: #222222;
