--- a/_css/utilidades/components.css
+++ b/_css/utilidades/components.css
@@ -6,13 +6,14 @@
 
 .botao {
   display: inline-block;
-  padding: 16px 32px;
+  padding: 12px 24px;
   background: var(--cp1);
   border-radius: 4px;
-  box-shadow: 0px 2px 1px rgba(0, 0, 0, 0.1);
+  box-shadow: 0px 2px 1px rgb(0 0 0 / 10%);
   text-transform: uppercase;
   color: var(--cp1-b);
-  font: 600 1.125rem/1.35 "Montserrat", sans-serif;
+  font: 600 .875rem/1.5 "Montserrat", sans-serif;
+  letter-spacing: 1px;
   max-width: max-content;
   border: none;
   cursor: pointer;
