--- a/_css/home/hero.css
+++ b/_css/home/hero.css
@@ -18,7 +18,8 @@
 }
 @media (max-width: 560px) {
   .hero {
-    padding-top: 40px;
+    padding-top: 100px;
+    padding-bottom: 40px;
   }
 
   .hero-conteudo h1 {
